[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Enviroment/Chest.gd" type="Script" id=1]
[ext_resource path="res://Sprites/World_spritesheet_16x16.png" type="Texture" id=2]
[ext_resource path="res://Assets/TextBox/Text_Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Enviroment/Gate_Static_Body.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 7 )

[node name="Chest" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 9
vframes = 16
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Chest_Static_Body" type="StaticBody2D" parent="."]
collision_layer = 9
collision_mask = 15
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest_Static_Body"]
shape = SubResource( 2 )

[node name="Text_Box_Layer" type="CanvasLayer" parent="."]
layer = 10

[node name="Text_Box" parent="Text_Box_Layer" instance=ExtResource( 4 )]

[connection signal="body_entered" from="." to="." method="_on_Chest_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Chest_body_exited"]
[connection signal="on_end_dialog" from="Text_Box_Layer/Text_Box" to="." method="_on_Text_Box_on_end_dialog"]
